fixing text align for mobile banner

--- a/css/style.css
+++ b/css/style.css
@@ -1372,6 +1372,7 @@ footer h6{
 
   .banner-h2 {
     font-size: 1.6em;
+    text-align: center;
   }
 
   /* ----- side image ------- */
